# mimium-libimport-example

./: CMakeLists.txt  LICENSE  main.cpp  readme.md
